--- a/shop.html
+++ b/shop.html
@@ -40,12 +40,12 @@
       <div class="relative z-10 flex flex-col min-h-screen">
         <header class="py-6 px-8 lg:px-16 flex justify-between items-center w-full">
             <div class="flex-1 flex justify-start">
-                <a href="home.html" aria-label="entregable Inicio">
+                <a href="index.html" aria-label="entregable Inicio">
                     <img src="https://entregable.cyluk.com/logo.svg" alt="entregable Logo" class="h-8" />
                 </a>
             </div>
             <nav class="hidden lg:flex items-center gap-8 tracking-wider text-sm text-gray-400">
-                <a href="home.html" class="hover:text-white transition-colors duration-300">INICIO</a>
+                <a href="index.html" class="hover:text-white transition-colors duration-300">INICIO</a>
                 <a href="shop.html" class="hover:text-white transition-colors duration-300">TIENDA</a>
                 <a href="about.html" class="hover:text-white transition-colors duration-300">NOSOTROS</a>
                 <a href="contact.html" class="hover:text-white transition-colors duration-300">CONTACTO</a>
@@ -125,7 +125,7 @@
             <div class="mx-auto px-8 lg:px-16">
                 <div class="py-16 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
                 <div class="lg:col-span-1">
-                    <a href="home.html" aria-label="entregable Inicio">
+                    <a href="index.html" aria-label="entregable Inicio">
                         <img src="https://entregable.cyluk.com/logo.svg" alt="entregable Logo" class="h-8 mb-4" />
                     </a>
                     <p class="text-sm max-w-xs">Forjando legados, un reloj a la vez. La cumbre del lujo y la ingeniería de precisión.</p>
@@ -134,7 +134,7 @@
                     <div>
                     <h3 class="font-semibold text-white tracking-wider mb-4">Enlaces Rápidos</h3>
                     <ul class="space-y-3 text-sm">
-                        <li><a href="home.html" class="hover:text-white transition-colors">Inicio</a></li>
+                        <li><a href="index.html" class="hover:text-white transition-colors">Inicio</a></li>
                         <li><a href="shop.html" class="hover:text-white transition-colors">Tienda</a></li>
                         <li><a href="about.html" class="hover:text-white transition-colors">Nosotros</a></li>
                         <li><a href="contact.html" class="hover:text-white transition-colors">Contacto</a></li>
